# SnKOpen-Analog-Clock

./: .gitignore  .gitmodules  About.cpp  About.h  App.cpp  App.h  Application.manifest  CMakeLists.txt  Main.cpp  Options.cpp  Options.h  OptionsDialog.cpp  OptionsDialog.h  README.md  SnKOpen-Analog-Clock.rc  SnKOpen-Analog-Clock.sln  SnKOpen-Analog-Clock.vcxproj  SnKOpen-Analog-Clock.vcxproj.filters  VersionInfo.h  Window.cpp  Window.h  project-root.props  resource.h  stdafx.h  targetver.h
.github/workflows/: msbuild.yml
res/: SnKOpen-Analog-Clock.rc2
